# ContactsBook_FastAPI

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
docs/source/: conf.py  index.rst
migrations/: README  env.py
migrations/versions/: 2eb386bf26ce_add_user_role.py  4159947da7af_add_table_users.py  4e0ba3a0575a_update_user.py  6f822d9f55f6_init.py  e98217b445c6_init.py  ebdb81add6c4_change_field_phone.py
src/conf/: config.py  messages.py
src/database/: db.py  db_asyng.py  models.py
src/repository/: contacts.py  contacts_mtm.py  full_access.py  one_contact.py  users.py
src/routes/: auth.py  contacts.py  contacts_mtm.py  full_access.py  one_contact.py  users.py
src/schemas/: contacts.py  contacts_mtm.py  schema_contacts.py  user.py
src/services/: auth.py  email.py  roles.py
src/services/templates/: verify_email.html
tests/: conftest.py  test_route_auth.py  test_route_contacts.py  test_route_one_contact.py  test_unit_repository.py
