[tool.poetry]
name = "rest-api"
version = "0.1.0"
description = ""
authors = ["Alona7777 <abogolepova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-extra-types = "^2.6.0"
phonenumbers = "^8.13.32"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
